force-app/main/default/objects/VesselContract__c/VesselContract__c.object-meta.xml
<CustomObject>
    <label>Vessel Contract</label>
    <nameField>
        <label>Contract Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vessel Contracts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>