force-app/main/default/objects/VesselContract__c/fields/ActualDailyRateBRL__c.field-meta.xml
<CustomField>
    <fullName>ActualDailyRateBRL__c</fullName>
    <label>Actual Daily Rate (BRL)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>