force-app/main/default/objects/VesselContract__c/fields/ActualDailyRateUSD__c.field-meta.xml
<CustomField>
    <fullName>ActualDailyRateUSD__c</fullName>
    <label>Actual Daily Rate (USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>