force-app/main/default/objects/VesselContract__c/fields/Allowances__c.field-meta.xml
<CustomField>
    <fullName>Allowances__c</fullName>
    <label>Allowances</label>
    <length>255</length>
    <type>Text</type>
</CustomField>