force-app/main/default/objects/VesselContract__c/fields/BOMEndDate__c.field-meta.xml
<CustomField>
    <fullName>BOMEndDate__c</fullName>
    <formula>ADDMONTHS(BOMStartDate__c ,1) - 1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BOM End Date</label>
    <type>Date</type>
</CustomField>