force-app/main/default/objects/VesselContract__c/fields/BOMStartDate__c.field-meta.xml
<CustomField>
    <fullName>BOMStartDate__c</fullName>
    <label>BOM Start Date</label>
    <type>Date</type>
</CustomField>