force-app/main/default/objects/VesselContract__c/fields/Client__c.field-meta.xml
<CustomField>
    <fullName>Client__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client Management</label>
    <referenceTo>Client__c</referenceTo>
    <relationshipLabel>Vessel Contracts</relationshipLabel>
    <relationshipName>VesselContracts</relationshipName>
    <type>Lookup</type>
</CustomField>