force-app/main/default/objects/VesselContract__c/fields/ContractAnniversary__c.field-meta.xml
<CustomField>
    <fullName>ContractAnniversary__c</fullName>
    <label>Contract Anniversary</label>
    <type>Date</type>
</CustomField>