force-app/main/default/objects/VesselContract__c/fields/Contracted__c.field-meta.xml
<CustomField>
    <fullName>Contracted__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contractor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Vessel Contracts (Contracted)</relationshipLabel>
    <relationshipName>VesselContracts1</relationshipName>
    <type>Lookup</type>
</CustomField>