force-app/main/default/objects/VesselContract__c/fields/Contractor__c.field-meta.xml
<CustomField>
    <fullName>Contractor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Vessel Contracts</relationshipLabel>
    <relationshipName>VesselContracts</relationshipName>
    <type>Lookup</type>
</CustomField>