force-app/main/default/objects/VesselContract__c/fields/ContractTotalAmountBRL__c.field-meta.xml
<CustomField>
    <fullName>ContractTotalAmountBRL__c</fullName>
    <label>Contract Total Amount (BRL)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>