force-app/main/default/objects/VesselContract__c/fields/ContractTotalAmountUSD__c.field-meta.xml
<CustomField>
    <fullName>ContractTotalAmountUSD__c</fullName>
    <label>Contract Total Amount (USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>