force-app/main/default/objects/VesselContract__c/fields/Escalation_Formula__c.field-meta.xml
<CustomField>
    <fullName>Escalation_Formula__c</fullName>
    <label>Escalation Formula</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>