force-app/main/default/objects/VesselContract__c/fields/Index1__c.field-meta.xml
<CustomField>
    <fullName>Index1__c</fullName>
    <label>Index¹</label>
    <length>100</length>
    <type>Text</type>
</CustomField>