force-app/main/default/objects/VesselContract__c/fields/Index2__c.field-meta.xml
<CustomField>
    <fullName>Index2__c</fullName>
    <label>Index²</label>
    <length>100</length>
    <type>Text</type>
</CustomField>