force-app/main/default/objects/VesselContract__c/fields/Index3__c.field-meta.xml
<CustomField>
    <fullName>Index3__c</fullName>
    <label>Index³</label>
    <length>100</length>
    <type>Text</type>
</CustomField>