force-app/main/default/objects/VesselContract__c/fields/MealAllowance__c.field-meta.xml
<CustomField>
    <fullName>MealAllowance__c</fullName>
    <label>Meal Allowance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>