force-app/main/default/objects/VesselContract__c/fields/Object__c.field-meta.xml
<CustomField>
    <fullName>Object__c</fullName>
    <label>Object</label>
    <type>TextArea</type>
</CustomField>