force-app/main/default/objects/VesselContract__c/fields/Pilot__c.field-meta.xml
<CustomField>
    <fullName>Pilot__c</fullName>
    <label>Pilot Gas</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>