force-app/main/default/objects/VesselContract__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Charter</fullName>
            </value>
            <value>
                <fullName>Cost Plus</fullName>
            </value>
            <value>
                <fullName>O&amp;M Support</fullName>
            </value>
            <value>
                <fullName>Pre-Ops</fullName>
            </value>
            <value>
                <fullName>Services</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>