force-app/main/default/objects/VesselContract__c/fields/Vessel__c.field-meta.xml
<CustomField>
    <fullName>Vessel__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vessel</label>
    <referenceTo>Vessel__c</referenceTo>
    <relationshipLabel>Vessel Contracts</relationshipLabel>
    <relationshipName>VesselContracts</relationshipName>
    <type>Lookup</type>
</CustomField>