force-app/main/default/objects/VesselContract__c/validationRules/ObligateDailyRateBRL.validationRule-meta.xml
<ValidationRule>
    <fullName>ObligateDailyRateBRL</fullName>
    <active>true</active>
    <errorConditionFormula>AND
(
  		ISPICKVAL(Type__c, &apos;Services&apos;),
			 ISBLANK(ActualDailyRateBRL__c) 	 
)</errorConditionFormula>
    <errorMessage>The Actual Daily Rate (BRL) field must be filled.</errorMessage>
</ValidationRule>