force-app/main/default/objects/VesselContract__c/validationRules/ObligateDailyRateUSD.validationRule-meta.xml
<ValidationRule>
    <fullName>ObligateDailyRateUSD</fullName>
    <active>true</active>
    <errorConditionFormula>AND
(
  		ISPICKVAL(Type__c, &apos;Charter&apos;),
			 ISBLANK(ActualDailyRateUSD__c) 	 
)</errorConditionFormula>
    <errorMessage>The Actual Daily Rate (USD) field must be filled.</errorMessage>
</ValidationRule>