force-app/main/default/objects/VesselContract__c/validationRules/ObligatePilotOnServices.validationRule-meta.xml
<ValidationRule>
    <fullName>ObligatePilotOnServices</fullName>
    <active>true</active>
    <errorConditionFormula>AND( 
ISPICKVAL(Type__c, &apos;Services&apos;),
ISBLANK(Pilot__c)
)</errorConditionFormula>
    <errorMessage>You must fill the Pilot field on Services Contracts.</errorMessage>
</ValidationRule>