force-app/main/default/objects/VesselContract__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>VesselShortName__c</columns>
    <columns>Type__c</columns>
    <columns>Client__c</columns>
    <columns>ContractAnniversary__c</columns>
    <columns>Contracted__c</columns>
    <columns>Contractor__c</columns>
    <columns>StartDate__c</columns>
    <columns>EndDate__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <sharedTo>
        <role>Administrator</role>
        <role>Commercial</role>
        <role>VesselContractAdministrator</role>
        <role>Vessel_Contract_Read</role>
    </sharedTo>
</ListView>