force-app/main/default/objects/VesselContract__c/listViews/MV20.listView-meta.xml
<ListView>
    <fullName>MV20</fullName>
    <columns>VesselShortName__c</columns>
    <columns>NAME</columns>
    <columns>ContractAnniversary__c</columns>
    <columns>StartDate__c</columns>
    <columns>EndDate__c</columns>
    <columns>ActualDailyRateBRL__c</columns>
    <columns>ActualDailyRateUSD__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>VesselShortName__c</field>
        <operation>equals</operation>
        <value>MV20</value>
    </filters>
    <label>MV20</label>
</ListView>