force-app/main/default/objects/VesselContract__c/listViews/MV24.listView-meta.xml
<ListView>
    <fullName>MV24</fullName>
    <columns>VesselShortName__c</columns>
    <columns>NAME</columns>
    <columns>Contractor__c</columns>
    <columns>ContractAnniversary__c</columns>
    <columns>Type__c</columns>
    <columns>StartDate__c</columns>
    <columns>EndDate__c</columns>
    <columns>ActualDailyRateBRL__c</columns>
    <columns>ActualDailyRateUSD__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>VesselShortName__c</field>
        <operation>equals</operation>
        <value>MV24</value>
    </filters>
    <label>MV24</label>
</ListView>